# yt-audio-downloader

./: .gitignore  README.md  example.yaml  fetch_youtube_urls.py  pyproject.toml
yt_audio_downloader/: main.py
